istiod-config/istiod-default-validator-ValidatingWebhookConfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    meta.helm.sh/release-name: base
    meta.helm.sh/release-namespace: istio-system
  creationTimestamp: "2024-11-24T13:45:54Z"
  generation: 2
  labels:
    app: istiod
    app.kubernetes.io/instance: base
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: istiod
    app.kubernetes.io/part-of: istio
    app.kubernetes.io/version: 1.0.0
    helm.sh/chart: base-1.0.0
    istio: istiod
    istio.io/rev: default
    release: base
  name: istiod-default-validator
  resourceVersion: "90155690"
  uid: 9c0c0f9d-ee84-4836-aeaa-b71cfedefb2f
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvRENDQWVTZ0F3SUJBZ0lRZkZuVm1Pa2pMR1JmZG5ka0hSS2lqVEFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFLRXcxamJIVnpkR1Z5TG14dlkyRnNNQjRYRFRJek1UQXhNakUyTkRRd01sb1hEVE16TVRBdwpPVEUyTkRRd01sb3dHREVXTUJRR0ExVUVDaE1OWTJ4MWMzUmxjaTVzYjJOaGJEQ0NBU0l3RFFZSktvWklodmNOCkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFOcStURnVsMWV3Q0hUa2pxQSttbWZTeFJzcVdRbk8vMWdOd1R3U20KSGNGUTVCYWhFQ043ZWxYblNueklCNE84V1pEU3lRV2FVNmZzbVpJNVFpaWdDcDJJQzJnNndPOXFrRzd0MmJiVAp5QXhBbDV6cFp1NF [...]
    service:
      name: istiod
      namespace: istio-system
      path: /validate
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validation.istio.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - security.istio.io
    - networking.istio.io
    - telemetry.istio.io
    - extensions.istio.io
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - '*'
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
